solution/duc/language/src/test/resources/error/InvalidAssignmentInBinOp.duc
function computeDouble(x) {
  return 2 * x;
}

function main() {
  5 + computeDouble(2) = 4;
}